--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "morgan": "^1.3.0",
     "multiparty": "^3.3.2",
     "request": "^2.42.0",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "underscore-contrib": "^0.3.0"
   },
   "devDependencies": {
     "chai": "^1.9.1",
@@ -39,6 +40,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^0.7.1",
     "grunt-shell": "^1.1.1",
-    "jshint-stylish": "^0.4.0"
+    "jshint-stylish": "^0.4.0",
+    "underscore-contrib": "^0.3.0"
   }
 }
