--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "morgan": "^1.3.0",
     "multiparty": "^3.3.2",
     "request": "^2.42.0",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "underscore-contrib": "^0.3.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
